2010-08-24  Jaroslav Hajek  <highegg@gmail.com>

	* Array-ch.cc: Inline basic sorts.

2010-08-21  Rik <octave@nomad.inbox5.com>

	* CmplxQRP.cc, CmplxQRP.h, dbleQRP.cc, dbleQRP.h, fCmplxQRP.cc,
	fCmplxQRP.h, floatQRP.cc, floatQRP.h: Declare Pvec as RowVector,
	not ColumnVector.  Bug #30832.

2010-08-18  Jaroslav Hajek  <highegg@gmail.com>

	* mx-inlines.cc (mx_inline_all_finite): New check.
	* Sparse-op-defs.h (SPARSE_SMS_BIN_OP_1, SPARSE_SMS_BIN_OP_2,
	SPARSE_SSM_BIN_OP_1, SPARSE_SSM_BIN_OP_2): Use unchecked access where
	appropriate.
	(SPARSE_SMM_BIN_OP_1, SPARSE_MSM_BIN_OP_1): Simplify.
	(SPARSE_SMM_BIN_OP_2, SPARSE_MSM_BIN_OP_2): Use optimized code path
	if all values are finite.
	(SPARSE_MSM_BIN_OPS): Use SPARSE_MSM_BIN_OP_1 for division.

2010-07-31  Rik <octave@nomad.inbox5.com>

	* DASPK-opts.in, DASRT-opts.in, DASSL-opts.in, LSODE-opts.in, 
	  Quad-opts.in: Grammarcheck .cc files

2010-07-29  Jaroslav Hajek  <highegg@gmail.com>

	* dim-vector.cc (dim_vector::dim_max (void)): Turn it into a function.
	(dim_vector::safe_numel): Update usage.
	* dim-vector.h: Update declaration.

2010-07-27  Jaroslav Hajek  <highegg@gmail.com>

	* dbleSCHUR.cc (SCHUR::SCHUR (const Matrix&, const Matrix&)): 
	New ctor.
	* dbleSCHUR.h: Declare it.
	* floatSCHUR.cc (FloatSCHUR::FloatSCHUR (const FloatMatrix&, const
	FloatMatrix&)): New ctor.
	* floatSCHUR.h: Declare it.
	* CmplxSCHUR.cc (ComplexSCHUR::ComplexSCHUR (const ComplexMatrix&,
	const ComplexMatrix&),
	ComplexSCHUR::ComplexSCHUR (const SCHUR&)): New ctors.
	* CmplxSCHUR.h: Declare them.
	* fCmplxSCHUR.cc (FloatComplexSCHUR::FloatComplexSCHUR 
	(const FloatComplexMatrix&, const FloatComplexMatrix&),
	FloatComplexSCHUR::FloatComplexSCHUR (const FloatSCHUR&)): New ctors.
	* fCmplxSCHUR.h: Declare them.

2010-07-22  Jaroslav Hajek  <highegg@gmail.com>

	* dMatrix.cc (Matrix::lssolve): Fix decision test for workaround.
	* fMatrix.cc (FloatMatrix::lssolve): Ditto.
	* CMatrix.cc (ComplexMatrix::lssolve): Ditto.